--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:2.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.jaredrummler:colorpicker:1.1.0'
+    implementation 'com.android.volley:volley:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
